--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/analytics": "^22.2.0",
     "@react-native-firebase/app": "^22.2.0",
     "@react-native-firebase/crashlytics": "^22.2.0",
     "@react-native-firebase/messaging": "^22.2.0",
+    "@react-navigation/bottom-tabs": "^7.3.14",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/stack": "^7.3.3",
     "@reduxjs/toolkit": "^2.8.2",
+    "react-hook-form": "^7.57.0",
     "react-native-push-notification": "^8.1.1",
-    "react-redux": "^9.2.0"
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-uuid": "^2.0.3",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
+    "uuid": "^11.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/react-native-push-notification": "^8.1.4",
-    "@types/react-redux": "^7.1.34"
+    "@types/react-redux": "^7.1.34",
+    "@types/uuid": "^10.0.0",
+    "@types/yup": "^0.29.14"
   }
 }
