--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/analytics": "^22.2.0",
     "@react-native-firebase/app": "^22.2.0",
@@ -18,11 +19,14 @@
     "react-hook-form": "^7.57.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-maps": "^1.24.3",
     "react-native-paper": "^5.14.5",
+    "react-native-permissions": "^5.4.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
+    "react-native-toast-message": "^2.3.0",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
